# python-admin

./: .gitignore  README.md  TODO.md  pyproject.toml  学习记录.md  设计.md
.codex/environments/: environment.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: api.py  auth.py  user.py
app/core/: config.py  database.py  exceptions.py  redis_client.py  response.py  security.py
app/crud/: user.py
app/db/: sql_builder.py
app/models/: user.py
app/schemas/: auth.py  common.py  user.py
app/services/: auth_service.py  user_service.py
